Permit all requests and OPTIONS preflight in SecurityConfig